--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxt/icon": "1.15.0",
     "@nuxt/image": "1.10.0",
     "@nuxt/ui": "^3.2.0",
+    "@supabase/supabase-js": "^2.50.3",
     "eslint": "^9.0.0",
     "nuxt": "^3.17.6",
     "typescript": "^5.6.3",
