--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "^9.0.0",
     "nuxt": "^3.17.6",
     "typescript": "^5.6.3",
+    "valibot": "^1.1.0",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   }
